fixed addbutton overflow #296

--- a/client/src/components/BaseCard/BaseCard.css
+++ b/client/src/components/BaseCard/BaseCard.css
@@ -166,9 +166,9 @@
   position: absolute;
   left: 50%;
   transform: translate(-50%);
-  font-size: 20px;
-  line-height: 20px;
-  top: 8px;
+  font-size: 16px;
+  line-height: 16px;
+  top: 10px;
 }
 
 .ic {
